api_versioned_docs/version-12.0.0-rc1/avalonia/controls/platform/index.mdx
---
title: 'Avalonia.Controls.Platform'
hide_title: true
slug: '/avalonia/controls/platform'
uid: 'Avalonia.Controls.Platform'
commentId: 'N:Avalonia.Controls.Platform'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Platform'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Platform Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Platform`

</div>

## Types

- [DefaultMenuInteractionHandler](defaultmenuinteractionhandler.mdx) - Provides the default keyboard and pointer interaction for menus.
- [IInputPane](iinputpane.mdx) - Listener for the platform's input pane(eg, software keyboard). Provides access to the input pane height and state.
- [IInsetsManager](iinsetsmanager.mdx)
- [IMenuInteractionHandler](imenuinteractionhandler.mdx) - Handles user interaction for menus.
- [IMountedVolumeInfoProvider](imountedvolumeinfoprovider.mdx) - Defines a platform-specific mount volumes info provider implementation.
- [INativeControlHostControlTopLevelAttachment](inativecontrolhostcontroltoplevelattachment.mdx)
- [INativeControlHostDestroyableControlHandle](inativecontrolhostdestroyablecontrolhandle.mdx)
- [INativeControlHostImpl](inativecontrolhostimpl.mdx)
- [INativeMenuExporter](inativemenuexporter.mdx)
- [INativeMenuExporterProvider](inativemenuexporterprovider.mdx)
- [IStorageProviderFactory](istorageproviderfactory.mdx) - Factory allows to register custom storage provider instead of native implementation.
- [ITopLevelNativeMenuExporter](itoplevelnativemenuexporter.mdx)
- [IWin32OptionsTopLevelImpl](iwin32optionstoplevelimpl.mdx)
- [IX11OptionsToplevelImplFeature](ix11optionstoplevelimplfeature.mdx)
- [InputPaneBase](inputpanebase.mdx)
- [InputPaneState](inputpanestate.mdx) - The input pane opened state.
- [InputPaneStateEventArgs](inputpanestateeventargs.mdx) - Provides state change information about the input pane.
- [InsetsManagerBase](insetsmanagerbase.mdx)
- [ManagedDispatcherImpl](manageddispatcherimpl.mdx)
- [ManagedDispatcherImpl.IManagedDispatcherInputProvider](manageddispatcherimpl-imanageddispatcherinputprovider.mdx)
- [MountedVolumeInfo](mountedvolumeinfo.mdx) - Describes a Drive's properties.
- [PlatformManager](platformmanager.mdx)
- [PlatformRequestedDrawnDecoration](platformrequesteddrawndecoration.mdx) - Flags indicating which drawn decoration parts a platform backend requires.
- [SafeAreaChangedArgs](safeareachangedargs.mdx)
- [SystemBarTheme](systembartheme.mdx)
- [X11NetWmWindowType](x11netwmwindowtype.mdx)
</ApiRefPage>

